docx: fdo#44029 export the right alignment when locale are RTL.

Change-Id: I771eb0d0a90816f0c4cbd66cfcb755f67455bb9b